# DI

Exercicios/: Ex2.py  Ex3-1.py  Ex7-1.py
Paquetado/: pyproject.toml
Paquetado/fontes/: README.md  pyproject.toml
Paquetado/fontes/paquete_exemplo_JorgeDC/: main.py
PruebaQT/: ExemploComboBox.py  ExercicioInterfaz.py  ExercicioInterfazGrid.py  ModeloLista.py  PruebaGrid.py  Ventana2.py  probaQTCreator.py  saudoQT.py
PruebaQT/EjemplosGTK_en_QT/: ExemploComboBox.py  ModeloTaboa.py
PruebaQT/Examen1Qt/: exameDI16112025Balumnos.py
PruebaQT/InterfaceQTCreator/: InterfaceQTCreator.pyproject  fiestraprincipal.py  form.ui
PruebaQT/PruebaEssemtia/: CaixaCor.py  ExemploBox.py
PruebasGTK/: EjemploGrid.py  EjemploInterfaz.py  EjemploPathlib.py  PruebasDeAccesoConALT.py  PruebasTree.py  TreeViewEditable.py  pruebas.py
PruebasGTK/EjemploEssemtia/: CaixaCor.py  EjemploBox.py
PruebasGTK/Glade/: EjemploGlade.py  formularioAlbara.glade
PruebasPY/: Ejemplos.py  Ejemplos2.py  ExemplosObjetos.py  PruebasPrivacidad.py  SegundaVersionHerencia.py  accesoBD.py  colecciones.py  empaquetado.py  novoModulo.py  script.py
RepoLab/: Charts.py  Cnavas.py  ExemploUsoDrawing.py  FacturaEjemplo.py  Proba1.py  docConPlatypus.py
RepoLab/EXAMEN/: CorreccionExamen.py  ExamenReportLab(JorgeDuranCruz).py
RepoLab/PruebasIA/: ChatGPT.py  Copilot.py  Gemini.py
Sphinx/: main.py  setup.py
Sphinx/Aplicaci_n_de_exemplo_de_distribuci_n.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Sphinx/cod/: conexionBD.py
Sphinx/docs/source/: MatOperacion.rst  Persoa.rst  conexionBD.rst  conf.py  (+3 more)
(+5 files in other folders)
